fix z-indexing bug by giving footer a higher z-index

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -142,6 +142,7 @@ body {
 }
 
 [data-theme='dark'] .footer {
+  z-index: 100;
   background-color: var(--click-color-background);
 }
 
